// payment-service/proto/payment.proto

syntax = "proto3";

package com.ta04.srv.payment;

// Payment is a message for payment
message Payment {
    int32 id = 1;
    int32 order_id  = 2;
    string type = 3;
    bool status = 4;
}

// IndexPaymentRequest is a message for IndexPayments
message IndexPaymentsRequest {}

// Response is a response message
message Response {
    Payment payment = 1;
    Error error = 2;
    repeated Payment payments = 3;
}

// Error is an error message
message Error {
    string code = 1;
    string message = 2;
}

// PaymentService is a service for payment-service
service PaymentService {
    // IndexPayments is a method to index all payments
    rpc IndexPayments(IndexPaymentsRequest) returns (Response) {}

    // ShowPayment is a method to show a payment
    rpc ShowPayment(Payment) returns (Response) {}

    // StorePayment is a method to store a new payment
    rpc StorePayment(Payment) returns (Response) {}

    // UpdatePayment is a method to update a payment
    rpc UpdatePayment(Payment) returns (Response) {}

    // DestroyPayment is a method to delete a payment
    rpc DestroyPayment(Payment) returns (Response) {}
}